# cgp-workshop

./: Cargo.toml  README.md
tutorial/: Cargo.toml
tutorial/src/: lib.rs
tutorial/src/tutorials/: c02.rs  c03.rs  c04.rs  c05.rs  c06.rs  c07.rs  mod.rs
tutorial/src/tutorials/c01_auto_trait/: mod.rs  s1.rs  s2.rs  s3.rs  s4.rs  s5.rs  s6.rs
