[package]
name         = "cgp-tutorial"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.72"
description  = """
    Tutorial on context-generic programming
"""

[package.metadata.docs.rs]
all-features = true

[dependencies]
cgp-core = { version = "0.1.0" }
itertools = "0.11"